--- a/hcj.html
+++ b/hcj.html
@@ -383,6 +383,7 @@
             <option value="usa">USA</option>
         </optgroup>
     </select>
+    <input name="search">
 <br />
     <br />
   </body>
